 syntax="proto3";
 package
// metamodel_version: 1.11.0
// version: 4.0.20
// Fysisk adresse eller postadresse.
message Adresse
 {
 repeated  string adresselinje = 0
  string postnummer = 0
  string poststed = 0
  landkode land = 0
 }
// Dokumentasjon til ein transaksjon (kompleks datatype).
message Bilag
 {
  date bilagsdato = 0
  string bilagsnummer = 0
  string referanse = 0
  string url = 0
  string filnavn = 0
  string data = 0
 }
// Ein elev registrert i skulesystemet.
message Elev
 {
  uriorcurie id = 0
  identifikator elevnummer = 0
  person person = 0
 }
// Betalingskrav utforma og oversendt frå fakturautstedar til fakturamottakar.
message Faktura
 {
  uriorcurie id = 0
  identifikator fakturanummer = 0
  date dato = 0
  date forfallsdato = 0
  integer belop = 0
  string mottaker = 0
  adresse adresse = 0
  boolean betalt = 0
  boolean fakturert = 0
  boolean kreditert = 0
  integer restbelop = 0
  fakturagrunnlag fakturagrunnlag = 0
 }
// Grunnlag for fakturering.
message Fakturagrunnlag
 {
  uriorcurie id = 0
  identifikator ordrenummer = 0
  fakturamottaker fakturamottaker = 0
 repeated  fakturalinje fakturalinjer = 0
  date leveringsdato = 0
  integer nettobelop = 0
  integer avgiftsbelop = 0
  integer totalbelop = 0
 repeated  faktura faktura = 0
  fakturautsteder fakturautsteder = 0
 }
// Del av Fakturagrunnlag som skildrar ei enkelt vare (kompleks datatype).
message Fakturalinje
 {
  float antall = 0
  integer pris = 0
 repeated  string fritekst = 0
  vare vare = 0
 }
// Aktør som skal betale faktura (kompleks datatype).
message Fakturamottaker
 {
  person person = 0
 }
// Eining som utformar og oversender faktura og mottar betaling.
message Fakturautsteder
 {
  uriorcurie id = 0
  string navn = 0
 repeated  fakturagrunnlag fakturagrunnlag = 0
  uriorcurie organisasjonselement = 0
 repeated  vare vare = 0
 }
// Liste over Norges fylker.
message Fylke
 {
  uriorcurie id = 0
  string kode = 0
  string navn = 0
  periode gyldighetsperiode = 0
  boolean passiv = 0
 repeated  kommune kommune = 0
 }
// Unik identifikasjon til eit objekt.
message Identifikator
 {
  string identifikatorverdi = 0
  periode gyldighetsperiode = 0
 }
// Verdiar for kjønn basert på ISO/IEC 5218.
message Kjonn
 {
  uriorcurie id = 0
  string kode = 0
  string navn = 0
  periode gyldighetsperiode = 0
  boolean passiv = 0
 }
// Liste over Norges kommunar.
message Kommune
 {
  uriorcurie id = 0
  string kode = 0
  string navn = 0
  periode gyldighetsperiode = 0
  boolean passiv = 0
  fylke fylke = 0
 }
// Informasjon som kan brukast for å oppnå kontakt.
message Kontaktinformasjon
 {
  string epostadresse = 0
  string mobiltelefonnummer = 0
  string nettsted = 0
  string sip = 0
  string telefonnummer = 0
 }
// Kontaktperson (pårørande) til ein person.
message Kontaktperson
 {
  uriorcurie id = 0
  kontaktinformasjon kontaktinformasjon = 0
  personnavn kontaktpersonNavn = 0
  string type = 0
 repeated  person kontaktperson = 0
 }
// Kontodimensjonar for ei postering (kompleks datatype).
message Kontostreng
 {
  string art = 0
  string funksjon = 0
  string ansvar = 0
  string prosjekt = 0
 }
// Landskode i ISO 3166-1 alpha-2 format.
message Landkode
 {
  uriorcurie id = 0
  string kode = 0
  string navn = 0
  periode gyldighetsperiode = 0
  boolean passiv = 0
 }
// Person eller verksemd som leverer produkt eller tenester.
message Leverandor
 {
  uriorcurie id = 0
  string kontonummer = 0
  identifikator leverandornummer = 0
  person person = 0
  leverandorgruppe leverandorgruppe = 0
  uriorcurie virksomhet = 0
 }
// Gruppering av leverandørar.
message Leverandorgruppe
 {
  uriorcurie id = 0
  string navn = 0
 repeated  leverandor leverandor = 0
 }
// Eintydleg identifisering av matrikkeleining innanfor kommune.
message Matrikkelnummer
 {
  adresse adresse = 0
  string bruksnummer = 0
  string festenummer = 0
  string gaardsnummer = 0
  string seksjonsnummer = 0
  kommune kommunenummer = 0
 }
// Kodeverk for merverdiavgifter.
message Merverdiavgift
 {
  uriorcurie id = 0
  string kode = 0
  string navn = 0
  integer sats = 0
  periode gyldighetsperiode = 0
  boolean passiv = 0
 }
// Rotcontainer for FINT Økonomi-instansar.
message OkonomiContainer
 {
 repeated  faktura fakturaer = 0
 repeated  fakturagrunnlag fakturagrunnlag = 0
 repeated  fakturautsteder fakturautstederear = 0
 repeated  transaksjon transaksjonar = 0
 repeated  postering posteringar = 0
 repeated  leverandor leverandorar = 0
 repeated  leverandorgruppe leverandorgrupper = 0
 repeated  vare varer = 0
 repeated  merverdiavgift merverdiavgifter = 0
 repeated  okonomiValuta valutaer = 0
 }
// Valuta for transaksjonsbeløp.
message OkonomiValuta
 {
  uriorcurie id = 0
  string kode = 0
  string navn = 0
  periode gyldighetsperiode = 0
  boolean passiv = 0
 }
// Tidsperiode med obligatorisk start og valfri slutt.
message Periode
 {
  string beskrivelse = 0
  datetime start = 0
  datetime slutt = 0
 }
// Fysiske private personar.
message Person
 {
  kontaktinformasjon kontaktinformasjon = 0
  adresse postadresse = 0
  uriorcurie id = 0
  string bilde = 0
  adresse bostedsadresse = 0
  date fodselsdato = 0
  identifikator fodselsnummer = 0
  personnavn personNavn = 0
 repeated  kontaktperson parorende = 0
 repeated  landkode statsborgerskap = 0
  kommune kommune = 0
  kjonn kjonn = 0
 repeated  person foreldreansvar = 0
 repeated  person foreldre = 0
  spraak maalform = 0
  spraak morsmaal = 0
 repeated  uriorcurie laerling = 0
  elev elev = 0
  uriorcurie otungdom = 0
  uriorcurie personalressurs = 0
 }
// Namn på ein person.
message Personnavn
 {
  string fornavn = 0
  string mellomnavn = 0
  string etternavn = 0
 }
// Føring på ein konto i rekneskapet.
message Postering
 {
  uriorcurie id = 0
  identifikator posteringsId = 0
  integer belop = 0
  boolean debet = 0
  kontostreng kontering = 0
  transaksjon transaksjon = 0
 }
// Verdiar for språk (2 bokstavar).
message Spraak
 {
  uriorcurie id = 0
  string kode = 0
  string navn = 0
  periode gyldighetsperiode = 0
  boolean passiv = 0
 }
// Overføring av pengar til eller frå eksterne partar.
message Transaksjon
 {
  uriorcurie id = 0
  identifikator transaksjonsId = 0
  integer belop = 0
  date forfallsdato = 0
  string beskrivelse = 0
 repeated  bilag bilag = 0
  datetime transaksjonstidspunkt = 0
  datetime oppdateringstidspunkt = 0
  leverandor leverandor = 0
 repeated  postering postering = 0
  uriorcurie ansvarlig = 0
  okonomiValuta valuta = 0
 }
// Valutakodar for offisielle valutaer.
message Valuta
 {
  uriorcurie id = 0
  identifikator bokstavkode = 0
  string valutaNavn = 0
  identifikator nummerkode = 0
 }
// Vare eller teneste som kan leverast og fakturerast.
message Vare
 {
  uriorcurie id = 0
  string kode = 0
  string navn = 0
  string enhet = 0
  integer pris = 0
  kontostreng kontering = 0
  periode gyldighetsperiode = 0
  boolean passiv = 0
  fakturautsteder fakturautsteder = 0
  merverdiavgift merverdiavgift = 0
 }
// Ein juridisk organisasjon som produserer varer eller tenester.
message Virksomhet
 {
  kontaktinformasjon kontaktinformasjon = 0
  adresse postadresse = 0
  adresse forretningsadresse = 0
  string organisasjonsnavn = 0
  identifikator organisasjonsnummer = 0
  uriorcurie id = 0
  identifikator virksomhetsId = 0
 repeated  uriorcurie laerling = 0
 }

